@@ -3,7 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.1.6.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
 	<groupId>kingbo401</groupId>
 	<artifactId>ice-acl</artifactId>
 	<version>1.0.0</version>
@@ -21,479 +26,54 @@
 		</license>
 	</licenses>
 
-	<scm>
-		<url>https://github.com/kingbo401/ice-acl</url>
-		<connection>scm:git:https://github.com/kingbo401/ice-acl.git</connection>
-		<developerConnection>scm:git:https://github.com/kingbo401/ice-acl.git</developerConnection>
-	</scm>
-
-	<issueManagement>
-		<system>Github Issues</system>
-		<url>https://github.com/kingbo401/ice-acl/issues</url>
-	</issueManagement>
-
 	<properties>
-		<!-- Test libs -->
-		<junit_version>4.12</junit_version>
-		<!-- Build args -->
-		<argline>-server -Xms256m -Xmx512m -XX:PermSize=64m
-			-XX:MaxPermSize=128m -Dfile.encoding=UTF-8
-			-Djava.net.preferIPv4Stack=true
-		</argline>
-		<skip_maven_deploy>false</skip_maven_deploy>
-		<updateReleaseInfo>true</updateReleaseInfo>
-		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
 
-		<!-- for maven compiler plugin -->
-		<java_source_version>1.7</java_source_version>
-		<java_target_version>1.7</java_target_version>
-		<file_encoding>UTF-8</file_encoding>
-		<!-- Maven plugins -->
-		<maven_jar_version>3.0.2</maven_jar_version>
-		<maven_surefire_version>2.19.1</maven_surefire_version>
-		<maven_deploy_version>2.8.2</maven_deploy_version>
-		<maven_compiler_version>3.6.0</maven_compiler_version>
-		<maven_source_version>3.0.1</maven_source_version>
-		<maven_javadoc_version>3.0.0</maven_javadoc_version>
-		<maven_jetty_version>6.1.26</maven_jetty_version>
-		<maven_checkstyle_version>3.0.0</maven_checkstyle_version>
-		<maven_jacoco_version>0.8.1</maven_jacoco_version>
-		<apache-rat-plugin.version>0.12</apache-rat-plugin.version>
-		<spring-version>3.2.18.RELEASE</spring-version>
-		<junit-version>4.11</junit-version>
-		<slf4j-version>1.7.25</slf4j-version>
-		<logback-version>1.2.3</logback-version>
-		<commons-lang-version>2.6</commons-lang-version>
-		<commons-beanutils-version>1.9.2</commons-beanutils-version>
-		<commons-io-version>2.5</commons-io-version>
-		<commons-collections-version>3.2.2</commons-collections-version>
-		<servlet-version>2.5</servlet-version>
-		<jackson-version>1.9.13</jackson-version>
-		<jsp-api-version>2.0</jsp-api-version>
-		<druid-version>1.0.25</druid-version>
-		<mybatis-version>3.4.5</mybatis-version>
-		<mybatis-spring-version>1.3.1</mybatis-spring-version>
-		<guava-version>25.0-jre</guava-version>
-		<mysql-connector-java-version>5.1.46</mysql-connector-java-version>
-		<aspectjweaver-version>1.8.0</aspectjweaver-version>
 	</properties>
+
 	<modules>
 		<module>ice-acl-common</module>
-		<module>ice-acl-core</module>
 		<module>ice-acl-api</module>
+		<module>ice-acl-core</module>
 		<module>ice-acl-web</module>
 	</modules>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>${junit-version}</version>
-				<scope>test</scope>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>2.1.0</version>
 			</dependency>
-			
-			<dependency>
-			    <groupId>mysql</groupId>
-			    <artifactId>mysql-connector-java</artifactId>
-			    <version>${mysql-connector-java-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-test</artifactId>
-				<version>${spring-version}</version>
-				<scope>test</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
-				<version>${servlet-version}</version>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>jsp-api</artifactId>
-				<version>${jsp-api-version}</version>
-				<scope>provided</scope>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-beans</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jdbc</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-orm</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-web</artifactId>
-				<version>${spring-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>commons-beanutils</groupId>
-				<artifactId>commons-beanutils</artifactId>
-				<version>${commons-beanutils-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>commons-lang</groupId>
-				<artifactId>commons-lang</artifactId>
-				<version>${commons-lang-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>commons-io</groupId>
-				<artifactId>commons-io</artifactId>
-				<version>${commons-io-version}</version>
-			</dependency>
-			
-			<dependency>
-			    <groupId>commons-collections</groupId>
-			    <artifactId>commons-collections</artifactId>
-			    <version>${commons-collections-version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>${logback-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>jcl-over-slf4j</artifactId>
-				<version>${slf4j-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-core-lgpl</artifactId>
-				<version>${jackson-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-mapper-lgpl</artifactId>
-				<version>${jackson-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.codehaus.jackson</groupId>
-				<artifactId>jackson-xc</artifactId>
-				<version>${jackson-version}</version>
-			</dependency>
-			
 			<dependency>
 				<groupId>com.alibaba</groupId>
-				<artifactId>druid</artifactId>
-				<version>${druid-version}</version>
+				<artifactId>druid-spring-boot-starter</artifactId>
+				<version>1.1.18</version>
 			</dependency>
-			
 			<dependency>
-				<groupId>org.mybatis</groupId>
-				<artifactId>mybatis</artifactId>
-				<version>${mybatis-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.mybatis</groupId>
-				<artifactId>mybatis-spring</artifactId>
-				<version>${mybatis-spring-version}</version>
-			</dependency>
-			
-			<dependency>
-			    <groupId>com.google.guava</groupId>
-			    <artifactId>guava</artifactId>
-			    <version>${guava-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.aspectj</groupId>
-				<artifactId>aspectjweaver</artifactId>
-				<version>${aspectjweaver-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-api</artifactId>
-				<version>${slf4j-version}</version>
-			</dependency>
-			
-			<dependency>
-				<groupId>ch.qos.logback</groupId>
-				<artifactId>logback-classic</artifactId>
-				<version>${logback-version}</version>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.2</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
 	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<build>
-				<filters>
-					<filter>../profile-dev.properties</filter>
-				</filters>
-			</build>
-		</profile>
-		<profile>
-			<id>test</id>
-			<build>
-				<filters>
-					<filter>../profile-test.properties</filter>
-				</filters>
-			</build>
-		</profile>
-		<profile>
-			<id>prod</id>
-			<build>
-				<filters>
-					<filter>../profile-prod.properties</filter>
-				</filters>
-			</build>
-		</profile>
-	</profiles>
 
 	<build>
 		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
-				<directory>src/main/java</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>**/*.properties</include>
-				</includes>
-			</resource>
+
 		</resources>
 		<testResources>
-			<testResource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-			<testResource>
-				<directory>src/main/java</directory>
-				<includes>
-					<include>**/*.xml</include>
-					<include>**/*.properties</include>
-				</includes>
-			</testResource>
+
 		</testResources>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>${maven_source_version}</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>${maven_jar_version}</version>
-				<configuration>
-					<archive>
-						<addMavenDescriptor>true</addMavenDescriptor>
-						<index>true</index>
-						<manifest>
-							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<forkMode>once</forkMode>
-					<argLine>${argline} ${jacocoArgLine}</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-deploy-plugin</artifactId>
-				<version>${maven_deploy_version}</version>
-				<configuration>
-					<skip>${skip_maven_deploy}</skip>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven_compiler_version}</version>
-				<configuration>
-					<fork>true</fork>
-					<source>${java_source_version}</source>
-					<target>${java_target_version}</target>
-					<encoding>${file_encoding}</encoding>
-				</configuration>
-			</plugin>
+
 		</plugins>
 
 		<pluginManagement>
 			<plugins>
-				<!-- keep surefire and failsafe in sync -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.19.1</version>
-				</plugin>
-				<!-- keep surefire and failsafe in sync -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-failsafe-plugin</artifactId>
-					<version>2.19.1</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-clean-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-resources-plugin</artifactId>
-					<version>3.0.1</version>
-				</plugin>
-				<plugin>
-					<groupId>org.ops4j.pax.exam</groupId>
-					<artifactId>maven-paxexam-plugin</artifactId>
-					<version>1.2.4</version>
-				</plugin>
-				<!--<plugin> -->
-				<!--<artifactId>maven-jar-plugin</artifactId> -->
-				<!--<version>3.0.2</version> -->
-				<!--<executions> -->
-				<!--<execution> -->
-				<!--<id>default-jar</id> -->
-				<!--<configuration> -->
-				<!--<archive> -->
-				<!--<manifest> -->
-				<!--<addDefaultImplementationEntries>true</addDefaultImplementationEntries> -->
-				<!--</manifest> -->
-				<!--<index>true</index> -->
-				<!--<manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile> -->
-				<!--</archive> -->
-				<!--</configuration> -->
-				<!--</execution> -->
-				<!--</executions> -->
-				<!--</plugin> -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>2.10</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.6</version>
-				</plugin>
-				<plugin>
-					<!-- Do NOT upgrade -->
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jxr-plugin</artifactId>
-					<version>2.2</version>
-				</plugin>
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>1.10</version>
-				</plugin>
-				<plugin>
-					<groupId>org.fusesource.hawtjni</groupId>
-					<artifactId>maven-hawtjni-plugin</artifactId>
-					<version>1.14</version>
-				</plugin>
-				<plugin>
-					<groupId>kr.motd.maven</groupId>
-					<artifactId>exec-maven-plugin</artifactId>
-					<version>1.0.0.Final</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-shade-plugin</artifactId>
-					<version>2.4.3</version>
-					<configuration>
-						<createDependencyReducedPom>false</createDependencyReducedPom>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.mortbay.jetty</groupId>
-					<artifactId>maven-jetty-plugin</artifactId>
-					<version>${maven_jetty_version}</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-checkstyle-plugin</artifactId>
-					<version>${maven_checkstyle_version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>com.puppycrawl.tools</groupId>
-							<artifactId>checkstyle</artifactId>
-							<version>8.9</version>
-						</dependency>
-					</dependencies>
-				</plugin>
+
 			</plugins>
 		</pluginManagement>
 	</build>
